Fix vertical alignment of checkboxes

--- a/nlw/share/skin/wikiwyg/css/lightbox.css
+++ b/nlw/share/skin/wikiwyg/css/lightbox.css
@@ -30,6 +30,12 @@
 
 .lightbox input {
     margin: 4px;
+    vertical-align: middle;
+}
+
+.lightbox label {
+    padding-top: 3px;
+    vertical-align: middle;
 }
 
 .lightbox .label {
